# entity-resolution-poc

./: .gitignore  BLOG_POST.md  Makefile  README.md  UNDERSTANDING.md  appendix.md  feedback.md  fix_paper.py  format_grid.md  format_grid.py  format_triplets.py  generate_appendix_tables.py  generate_pivot_table.py  generate_table.py  main.tex  paper.md  pyproject.toml  requirements.txt  split_tables.md  table.md
configs/: dataset.yaml  eval.yaml  finetune.yaml  finetune_modal.yaml  models.yaml
docs/: UNDERSTANDING.md  dataset-design.md  decisions.md  evaluation-protocol.md  experiment-log.md  inference-guide.md  model-lock.md  models.md  research-design.md
notebooks/: results_viz.ipynb
results/: 001_bm25_pipe.json  002_gte_modernbert_pipe_fp32.json  bge_small_base_128_binary.json  bge_small_base_128_fp32.json  bge_small_base_128_int8.json  bge_small_base_256_binary.json  bge_small_base_256_fp32.json  bge_small_base_256_int8.json  bge_small_base_384_binary.json  bge_small_base_384_fp32.json  bge_small_base_384_int8.json  bge_small_base_64_binary.json  bge_small_base_64_fp32.json  bge_small_base_64_int8.json  bge_small_base_pipe.json  bge_small_ft_128_binary.json  bge_small_ft_128_fp32.json  bge_small_ft_128_int8.json  bge_small_ft_256_binary.json  bge_small_ft_256_fp32.json  bge_small_ft_256_int8.json  bge_small_ft_384_binary.json  bge_small_ft_384_fp32.json  bge_small_ft_384_int8.json  bge_small_ft_64_binary.json  bge_small_ft_64_fp32.json  bge_small_ft_64_int8.json  bge_small_ft_pipe.json  gte_modernbert_base_base_128_binary.json  gte_modernbert_base_base_128_fp32.json  gte_modernbert_base_base_128_int8.json  gte_modernbert_base_base_256_binary.json  gte_modernbert_base_base_256_fp32.json  gte_modernbert_base_base_256_int8.json  (+70 more)
(+145 files in other folders)
